k8s-manifest/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: lushdew
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: daryladriene/lush-dew:backend_v1  # Replace with your actual backend image
          ports:
            - containerPort: 8000  # Replace with backend port
