k8s-manifest/frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: lushdew
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: daryladriene/lush-dew:frontend_v4  # Replace with your actual frontend image
          ports:
            - containerPort: 5173
